# lapig-task

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  send_email.py  worker.py
.github/workflows/: prod.yml
app/: config.py  oauth2.py  router.py
app/api/: oauth2.py  result.py  task.py  tvi.py
app/models/: oauth2.py  payload.py
app/utils/: file.py  gee2chat.py
docker/prod/: Dockerfile
workers/: email.py  gee.py  render.py  send_email.py
workers/models/: email.py
workers/templates/: base.html
workers/utils/: emial.py
