[project]
name = "lapig-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "dynaconf>=3.2.6",
    "earthengine-api>=1.1.2",
    "fastapi-keycloak-middleware>=1.1.0",
    "fastapi>=0.115.0",
    "flower>=2.0.1",
    "geemap>=0.34.5",
    "geopandas>=1.0.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.2",
    "orjson>=3.10.7",
    "pyamqp>=0.1.0.7",
    "pydantic-geojson>=0.1.1",
    "pydantic[email]>=2.9.2",
    "pyjwt>=2.9.0",
    "pymongo>=4.9.1",
    "python-keycloak>=4.5.0",
    "python-multipart>=0.0.12",
    "redis>=5.1.0",
    "unidecode>=1.3.8",
    "uvicorn>=0.31.0",
]
